--- a/templates/article/post_detail.html
+++ b/templates/article/post_detail.html
@@ -2,7 +2,7 @@
 {% extends 'base.html' %}
 {% block body %}
 <div>
-    <div>
+    <div class="brd">
     {% autoescape off %} 
         <h1>Title: {{post.title}}</h1>
         {{post.body}}
