--- a/templates/base.html
+++ b/templates/base.html
@@ -10,9 +10,9 @@
 </head>
 <style>
    .brd {
-    border: 4px double black; /* Параметры границы */
-    background: #EEDFAC; /* Цвет фона */
-    padding: 10px; /* Поля вокруг текста */
+    border: 4px double black;
+    background: #EEDFAC;
+    padding: 10px; 
    }
   </style>
 <body>
