Updated design, added API

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,22 +1,35 @@
 {% load static %}
 <!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport"
+    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+  <title>Datawiz Django Course</title>
 </head>
-<style>
-   .brd {
+<style>body{
+  background-color: #22325357; /* Цвет фона веб-страницы */
+ } 
+  .post-brd {
     border: 4px double black;
     background: #EEDFAC;
-    padding: 10px; 
-   }
-  </style>
+    padding: 10px;
+  }
+
+</style>
+
 <body>
-{% block body%}
-{% endblock body%}
+  {% block body%}
+  {% endblock body%}
 </body>
+
 </html>
