--- a/templates/article/post_detail.html
+++ b/templates/article/post_detail.html
@@ -1,13 +1,34 @@
-
 {% extends 'base.html' %}
 {% block body %}
-<div>
-    <div class="brd">
-    {% autoescape off %} 
-        <h1>Title: {{post.title}}</h1>
+<div class="container">
+    <div class="post-brd">
+        {% autoescape off %}
+        <h4>{{post.title}}</h4>
         {{post.body}}
-        <p>Author: {{post.author}}</p>
-    {% endautoescape %}
+        <p><h5>Author: {{post.author}}</h5></p>
+        {% endautoescape %}
     </div>
+
+
+        <div class="card-stacked">
+            {% for comment in post.comments.all%}
+            <div class="card-panel grey ">
+                <h5 ><i class="material-icons ">account_circle</i>{{comment.author_comment}}</h5>
+                <div class="card">
+                    <div class="card-stacked ">
+                        <div class="card-content flow-text grey lighten-4 ">
+                            {% autoescape off %}
+                            <p>{{comment.body}}</p>
+                            {% endautoescape %}
+                        </div>
+                        
+                <h2 class="header h5 right-align">{{comment.created}}</h2>
+                    </div>
+                </div>
+            </div>
+
+            {% endfor %}
+        </div>
+
 </div>
 {% endblock body %}
