--- a/templates/article/post_detail.html
+++ b/templates/article/post_detail.html
@@ -13,7 +13,7 @@
         <div class="card-stacked">
             {% for comment in post.comments.all%}
             <div class="card-panel grey ">
-                <h5 ><i class="material-icons ">account_circle</i>{{comment.author_comment}}</h5>
+                <h5 ><i class="material-icons ">account_circle</i>{{comment.author}}</h5>
                 <div class="card">
                     <div class="card-stacked ">
                         <div class="card-content flow-text grey lighten-4 ">
