--- a/templates/article/index.html
+++ b/templates/article/index.html
@@ -1,23 +1,38 @@
 {% extends 'base.html' %}
 
 {% block body %}
+<style>
+    body {
+        font-family: "Roboto", sans-serif;
+        font-size: 18px;
+        background-color: #fdfdfd;
+    }
+    
+    .head_text {
+        color: white;
+    }
+    
+    .card {
+        box-shadow: 0 16px 48px #E3E7EB;
+    }
+</style>
 
 
-<div>
-    {% for post in post_list%}
-    <div class="post-brd">
-        <h1>{{post.title}}</h1>
-        <p>
-        <h4>Author: {{post.author}} </h4>
-        </p>
-
-        {% autoescape off %}
-        <p>{{post.body}}</p>
-        {% endautoescape %}
-        Created: {{post.created}}
-        <a href="{% url 'post_detail' post.slug%}">Read more</a>
+<div class="container">
+    <div class="row">
+        <!-- Blog Entries Column -->
+        <div class="col-md-8 mt-3 left">
+            {% for post in post_list %}
+            <div class="card mb-4">
+                <div class="card-body">
+                    <h2 class="card-title">{{ post.title }}</h2>
+                    <p class="card-text text-muted h6">{{ post.author }} | {{ post.created}} </p>
+                    <p class="card-text">{{post.content|slice:":200" }}</p>
+                    <a href="{% url 'post_detail' post.slug  %}" class="btn btn-primary">Read More &rarr;</a>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
     </div>
-    {% endfor %}
-</div>
 </div>
 {% endblock body %}
