--- a/templates/base.html
+++ b/templates/base.html
@@ -28,8 +28,14 @@
 </style>
 
 <body>
+  
   {% block body%}
   {% endblock body%}
+  
+  <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
+  <script src="{% static '/js/s.js' %}" defer></script>
+  
 </body>
 
 </html>
