--- a/templates/article/index.html
+++ b/templates/article/index.html
@@ -21,7 +21,7 @@
 <div class="container">
     <div class="row">
             {% for post in post_list %}
-            <div class="card col-12 col-md-6 mb-4">
+            <div class="card col-12 col-md-5 mb-4 m-1">
                 <div class="card-body">
                     <h2 class="card-title">{{ post.title }}</h2>
                     <p class="card-text text-muted h6">{{ post.author }} | {{ post.created}} </p>
